[gd_scene load_steps=17 format=3 uid="uid://b0twhglekoev0"]

[ext_resource type="Script" path="res://hotel_entomologico/nivel.gd" id="1_imral"]
[ext_resource type="Texture2D" uid="uid://cujo1s1238teh" path="res://backgrounds/propuestaBackground2.jpeg" id="3_05vjb"]
[ext_resource type="AudioStream" uid="uid://dv13bqp2apq27" path="res://sonidos/JDSherbert - Ultimate UI SFX Pack - Popup Open - 1.mp3" id="4_vujtm"]
[ext_resource type="Texture2D" uid="uid://8o2d0r6qy7dn" path="res://hotel_entomologico/imagenes_hotel/hotel 1.png" id="5_3qv77"]
[ext_resource type="AudioStream" uid="uid://c6kyvuje5xp2v" path="res://sonidos/JDSherbert - Ultimate UI SFX Pack - Popup Close - 1.mp3" id="5_ftxel"]
[ext_resource type="PackedScene" uid="uid://bkhexfb8ykxgu" path="res://escenas_bichos/chapulin.tscn" id="7_omf8t"]
[ext_resource type="PackedScene" uid="uid://d5n8jdvdclen" path="res://escenas_bichos/grillo.tscn" id="8_v2p3x"]
[ext_resource type="PackedScene" uid="uid://bor44n3vfuh7b" path="res://escenas_bichos/jumil.tscn" id="9_qfpsu"]
[ext_resource type="Texture2D" uid="uid://coc1nfw7xttcg" path="res://botones/botonCuadroPequeño.png" id="10_imomw"]
[ext_resource type="Texture2D" uid="uid://gdavmpgnlfnh" path="res://botones/botonCuadroPequeñoPresionado.png" id="11_aplnf"]
[ext_resource type="Texture2D" uid="uid://dsbc74hxtxq3k" path="res://iconos/back.png" id="12_dtmey"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vt0ue"]
size = Vector2(90, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ongb"]
size = Vector2(74, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rj85j"]
size = Vector2(78, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy76i"]
size = Vector2(89, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eud3j"]
size = Vector2(73, 52)

[node name="Nivel" type="Node2D"]
script = ExtResource("1_imral")

[node name="area_grillo" type="Area2D" parent="." groups=["grillos"]]
position = Vector2(689, 475)

[node name="colision_grillo" type="CollisionShape2D" parent="area_grillo"]
position = Vector2(-9, -8)
shape = SubResource("RectangleShape2D_vt0ue")

[node name="area_hormiga_chicatana" type="Area2D" parent="." groups=["hormigas"]]
position = Vector2(497, 474)

[node name="colision_hormiga_chicatana" type="CollisionShape2D" parent="area_hormiga_chicatana"]
position = Vector2(-1, -7)
shape = SubResource("RectangleShape2D_6ongb")

[node name="area_chapulin" type="Area2D" parent="." groups=["chapulines"]]
position = Vector2(666, 208)

[node name="colision_chapulin" type="CollisionShape2D" parent="area_chapulin" groups=["chapulines"]]
position = Vector2(10, -1)
shape = SubResource("RectangleShape2D_rj85j")

[node name="area_jumil" type="Area2D" parent="." groups=["jumiles"]]
position = Vector2(575, 312)

[node name="colision_jumil" type="CollisionShape2D" parent="area_jumil" groups=["jumiles"]]
position = Vector2(3.5, 1.5)
shape = SubResource("RectangleShape2D_cy76i")

[node name="area_escarabajo" type="Area2D" parent="." groups=["escarabajos"]]
position = Vector2(484, 206)

[node name="colision_escarabajo" type="CollisionShape2D" parent="area_escarabajo"]
position = Vector2(-7.5, 0)
shape = SubResource("RectangleShape2D_eud3j")

[node name="PropuestaBackground2" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(582, 329)
scale = Vector2(0.601563, 0.602083)
texture = ExtResource("3_05vjb")

[node name="correcto" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vujtm")
pitch_scale = 1.5

[node name="incorrecto" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ftxel")
pitch_scale = 1.5

[node name="CasaMadera" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(574, 290)
scale = Vector2(0.375554, 0.260339)
texture = ExtResource("5_3qv77")

[node name="Chapulin" parent="." instance=ExtResource("7_omf8t")]
position = Vector2(1084, 599)

[node name="Chapulin2" parent="." instance=ExtResource("7_omf8t")]
position = Vector2(88, 569)

[node name="Chapulin3" parent="." instance=ExtResource("7_omf8t")]
position = Vector2(155, 600)

[node name="Grillo" parent="." instance=ExtResource("8_v2p3x")]
position = Vector2(631, 604)

[node name="Grillo2" parent="." instance=ExtResource("8_v2p3x")]
position = Vector2(511, 574)

[node name="Grillo3" parent="." instance=ExtResource("8_v2p3x")]
position = Vector2(848, 547)

[node name="Jumil" parent="." instance=ExtResource("9_qfpsu")]
position = Vector2(384, 621)

[node name="Jumil2" parent="." instance=ExtResource("9_qfpsu")]
position = Vector2(272, 612)

[node name="Jumil3" parent="." instance=ExtResource("9_qfpsu")]
position = Vector2(528, 617)

[node name="Jumil4" parent="." instance=ExtResource("9_qfpsu")]
position = Vector2(843, 612)

[node name="Jumil5" parent="." instance=ExtResource("9_qfpsu")]
position = Vector2(703, 555)

[node name="Jumil6" parent="." instance=ExtResource("9_qfpsu")]
position = Vector2(703, 555)

[node name="regresar" type="TextureButton" parent="."]
offset_left = 36.0
offset_top = 26.0
offset_right = 112.0
offset_bottom = 102.0
texture_normal = ExtResource("10_imomw")
texture_pressed = ExtResource("11_aplnf")

[node name="TextureRect" type="TextureRect" parent="regresar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -32.0
offset_right = 26.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_dtmey")

[connection signal="area_shape_entered" from="area_grillo" to="." method="_on_area_grillo_area_shape_entered"]
[connection signal="area_shape_exited" from="area_grillo" to="." method="_on_area_grillo_area_shape_exited"]
[connection signal="area_shape_entered" from="area_hormiga_chicatana" to="." method="_on_area_hormiga_chicatana_area_shape_entered"]
[connection signal="area_shape_exited" from="area_hormiga_chicatana" to="." method="_on_area_hormiga_chicatana_area_shape_exited"]
[connection signal="area_shape_entered" from="area_chapulin" to="." method="_on_area_chapulin_area_shape_entered"]
[connection signal="area_shape_exited" from="area_chapulin" to="." method="_on_area_chapulin_area_shape_exited"]
[connection signal="area_shape_entered" from="area_jumil" to="." method="_on_area_jumil_area_shape_entered"]
[connection signal="area_shape_exited" from="area_jumil" to="." method="_on_area_jumil_area_shape_exited"]
[connection signal="area_shape_entered" from="area_escarabajo" to="." method="_on_area_escarabajo_area_shape_entered"]
[connection signal="area_shape_exited" from="area_escarabajo" to="." method="_on_area_escarabajo_area_shape_exited"]
